--- a/SupplierPortal/SupplierPortal.csproj
+++ b/SupplierPortal/SupplierPortal.csproj
@@ -156,7 +156,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\GysmhActiveRecordBase.cs" />
     <Compile Include="Models\SupplierUser.cs" />
+    <Compile Include="Models\KingdeeActiveRecordBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -260,6 +262,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\SupplierUser\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
