--- a/SupplierPortal/Web.config
+++ b/SupplierPortal/Web.config
@@ -7,10 +7,36 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="activerecord" type="Castle.ActiveRecord.Framework.Config.ActiveRecordSectionHandler, Castle.ActiveRecord" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-SupplierPortal-20180724104748;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-SupplierPortal-20180724104748.mdf" />
+      <add name="GysmhConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=10.85.12.17)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME=orcl)));Persist Security Info=True;User ID=gysmh;Password=oracle;enlist=false" />
+      <add name="KingdeeConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=10.85.12.247)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME=orcl)));Persist Security Info=True;User ID=gysmh;Password=oracle;enlist=false" />
   </connectionStrings>
+  <activerecord isWeb="true">
+    <config>
+      <add key="connection.driver_class" value="NHibernate.Driver.OracleClientDriver" />
+      <add key="dialect" value="NHibernate.Dialect.Oracle10gDialect" />
+      <add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider" />
+      <add key="connection.connection_string_name" value="GysmhConnection" />
+      <add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle" />
+    </config>
+    <config type="SupplierPortal.Models.GysmhActiveRecordBase,SupplierPortal">
+      <add key="connection.driver_class" value="NHibernate.Driver.OracleClientDriver" />
+      <add key="dialect" value="NHibernate.Dialect.Oracle10gDialect" />
+      <add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider" />
+      <add key="connection.connection_string_name" value="GysmhConnection" />
+      <add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle" />
+    </config>
+    <config type="SupplierPortal.Models.KingdeeActiveRecordBase,SupplierPortal">
+      <add key="connection.driver_class" value="NHibernate.Driver.OracleClientDriver" />
+      <add key="dialect" value="NHibernate.Dialect.Oracle10gDialect" />
+      <add key="connection.provider" value="NHibernate.Connection.DriverConnectionProvider" />
+      <add key="connection.connection_string_name" value="KingdeeConnection" />
+      <add key="proxyfactory.factory_class" value="NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle" />
+    </config>
+  </activerecord>
+    
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
